encontrado o bug que causou a criação de um novo branch. foi encontrada uma solução temporária já que o bug não é core

--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
 <script src="js/Collision.js"></script>
 <script src="js/Scenary.js"></script>
 
+<!-- Classe molde de todos os objectos do jogo -->
+<script src="js/StarBlastObject.js"></script>
+
+<!-- Classes relativas à munição do canhão -->
+<script src="js/bullets/BulletDesign.js"></script>
+<script src="js/bullets/Bullet.js"></script>
+
 <!-- Classes relativas às naves (instanciáveis) -->
 <script src="js/spaceships/parts/Cannon.js"></script>
 <script src="js/spaceships/Spaceship.js"></script>
@@ -47,6 +54,8 @@
 <script src="js/spaceships/PlayerSpaceship.js"></script>
 <script src="js/spaceships/design/EnemySpaceshipDesign.js"></script>
 <script src="js/spaceships/EnemySpaceship.js"></script>
+
+
 
 <!-- Main -->
 <script src="js/StarBlast.js"></script>
