adicionados holofotes nos cantos

--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
 
 <script src="vendor/three.js"></script>
 
-<!-- Classes estáticas -->
 <script src="js/Constants.js"></script>
+
+<!-- Classe representativa dos holofotes -->
+<script src="js/lights/SpotlightDesign.js"></script>
+<script src="js/lights/Spotlight.js"></script>
+
+<!-- Classes estáticas -->
 <script src="js/Cameras.js"></script>
 <script src="js/Collision.js"></script>
 <script src="js/Scenary.js"></script>
@@ -54,8 +59,6 @@
 <script src="js/spaceships/PlayerSpaceship.js"></script>
 <script src="js/spaceships/design/EnemySpaceshipDesign.js"></script>
 <script src="js/spaceships/EnemySpaceship.js"></script>
-
-
 
 <!-- Main -->
 <script src="js/StarBlast.js"></script>
