guess what, ja ha colisoes com as paredes, imperfeitas mas ha

--- a/index.html
+++ b/index.html
@@ -36,17 +36,21 @@
 
 <script src="js/Constants.js"></script>
 
+<!-- Classe molde de todos os objectos do jogo -->
+<script src="js/StarBlastObject.js"></script>
+
 <!-- Classe representativa dos holofotes -->
 <script src="js/lights/SpotlightDesign.js"></script>
 <script src="js/lights/Spotlight.js"></script>
+
+<!-- Classe representativa das paredes -->
+<script src="js/walls/WallDesign.js"></script>
+<script src="js/walls/Wall.js"></script>
 
 <!-- Classes estáticas -->
 <script src="js/Cameras.js"></script>
 <script src="js/Collision.js"></script>
 <script src="js/Scenary.js"></script>
-
-<!-- Classe molde de todos os objectos do jogo -->
-<script src="js/StarBlastObject.js"></script>
 
 <!-- Classes relativas à munição do canhão -->
 <script src="js/bullets/BulletDesign.js"></script>
