codigo refactorado para suportar mais de um design

--- a/index.html
+++ b/index.html
@@ -56,10 +56,12 @@
 <script src="js/bullets/BulletDesign.js"></script>
 <script src="js/bullets/Bullet.js"></script>
 
+<!-- Designs -->
+<script src="js/spaceships/design/player/NeilA.js"></script>
+
 <!-- Classes relativas às naves (instanciáveis) -->
 <script src="js/spaceships/parts/Cannon.js"></script>
 <script src="js/spaceships/Spaceship.js"></script>
-<script src="js/spaceships/design/PlayerSpaceshipDesign.js"></script>
 <script src="js/spaceships/PlayerSpaceship.js"></script>
 <script src="js/spaceships/design/EnemySpaceshipDesign.js"></script>
 <script src="js/spaceships/EnemySpaceship.js"></script>
