nave alan bean adicionada

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 <script src="js/spaceships/design/NeilA.js"></script>
 <script src="js/spaceships/design/NeilAII.js"></script>
 <script src="js/spaceships/design/Buzz.js"></script>
+<script src="js/spaceships/design/AlanB.js"></script>
 
 <!-- Classes relativas às naves (instanciáveis) -->
 <script src="js/spaceships/parts/Cannon.js"></script>
