--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 <script src="js/Scenary.js"></script>
 
 <!-- Classes relativas à munição do canhão -->
-<script src="js/bullets/BulletDesign.js"></script>
+<script src="js/bullets/design/CannonBall.js"></script>
+<script src="js/bullets/design/Missile.js"></script>
 <script src="js/bullets/Bullet.js"></script>
 
 <!-- Designs -->
