naves se desintegram ao morrer

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
 <script src="js/bullets/design/Missile.js"></script>
 <script src="js/bullets/Bullet.js"></script>
 
+<script src="js/spaceships/parts/SpaceshipPart.js"></script>
+
 <!-- Designs -->
 <script src="js/spaceships/design/NeilA.js"></script>
 <script src="js/spaceships/design/NeilAII.js"></script>
