score mostra no canto superior direito

--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
     <meta charset="utf-8">
     <title>Star Blast</title>
     <link rel="stylesheet" href="css/estilo.css">
+    <link href="fonts/fontawesome/css/all.min.css" rel="stylesheet">
 </head>
 
 <body>
+    <div id="topItems">
+        <span>POINTS: <span id="noPoints"></span></span>
+        <span>REMAINING ENEMIES: <span id="noEnemies"></span></span>
+        <span>REMAINING TIME: <span id="timeAvailable"></span></span>
+        <span><span id="hearts"></span></span>
+    </div>
+
 </body>
 
 <!-- 
