diminuida a qualidade das sombras para aumentar o desempenho, but still

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <!-- É aqui que o Dasher, o Rudolph e o Prancer nascem -->
 <script>
     StarBlast.init();
-    animateFora();
+    animate();
 </script>
 
 </html>
