--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
 <body>
     <div id="topItems">
+        <span id="level"></span>
         <span>POINTS: <span id="noPoints"></span></span>
         <span>REMAINING ENEMIES: <span id="noEnemies"></span></span>
         <span>REMAINING TIME: <span id="timeAvailable"></span></span>
@@ -78,6 +79,8 @@
 <script src="js/spaceships/Spaceship.js"></script>
 <script src="js/spaceships/PlayerSpaceship.js"></script>
 <script src="js/spaceships/EnemySpaceship.js"></script>
+
+<script src="js/Level.js"></script>
 
 <!-- Main -->
 <script src="js/StarBlast.js"></script>
