parte da nave do boss feita

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     const exitBtn = document.getElementById('exit');
 
     document.getElementById('help').onclick = function () {
-        alert("Ver instruções.txt");
+        alert("Ver Instructions.png (será posto ingame em versões futuras)");
     }
 
     document.getElementById('scoreboard').onclick = function () {
