nave do boss implementada

--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <button id="teacherMode" class="newGame">
                 TEACHER MODE
             </button>
-            <button id="scoreboard" class="newGame">
+            <button id="scoreboard">
                 SCOREBOARD
             </button>
-            <button id="help" class="newGame">
+            <button id="help">
                 HELP
             </button>
             <button id="exit" style="display: none;">
@@ -143,8 +143,7 @@
             StarBlast.init();
             animate();
         } else {
-            isPlay = true;
-            animate();
+            StarBlast.play();
         }
     };
 
@@ -165,15 +164,27 @@
             StarBlast.init();
             animate();
         } else {
-            isPlay = true;
-            animate();
+            StarBlast.play();
         }
     };
 
-    document.getElementById('exit').onclick = function () {
+    document.getElementById('exit').onclick = exit();
+
+    document.addEventListener('keypress', (event) => {
+        console.log(event.code);
+        if (started == true) {
+            
+            if (event.code == "Escape") {
+                if (!isPlay) {
+                    StarBlast.play();
+                }
+            }
+        }
+    });
+
+    function exit() {
         StarBlast.finish();
         const elements = document.getElementsByClassName('newGame');
-
         for (let i = 0; i < elements.length; i++) {
             elements[i].setAttribute('style', 'display: block');
         }
