bug do reinicio resolvido

--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
         }
     };
 
-    document.getElementById('exit').onclick = exit();
+    exitBtn.addEventListener('click', (event) => {
+        exit();
+    });
 
     document.addEventListener('keypress', (event) => {
         console.log(event.code);
