--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <span>REMAINING TIME: <span id="timeAvailable"></span></span>
         <span><span id="hearts"></span></span>
     </div>
+    <div id="gameOver" style="display: none"></div>
 
 </body>
 
@@ -113,9 +114,12 @@
     let startedStyle = "background: none;position: absolute;height: 100%;width: 100%;z-index: 100;background-position: center;background-repeat: no-repeat;ackground-size: cover;";
     let topItemsStyle = "position: absolute;z-index: 100;display: flex;flex-direction: column;color: #fff;width: 100%;height: 15%;padding: 2em;right: 1em;font-family: 'SpaceMission';font-size: large;letter-spacing: .2em;text-align: right;justify-content: space-between;";
     let newGameStyle = "background-image: url('img/bckg.jpg');position: absolute;height: 100%;width: 100%;z-index: 100;background-position: center;background-repeat: no-repeat;ackground-size: cover;";
+    let gameOverStyle = "display:block;position:absolute;z-index: 80; background: url('img/Game-over.png');width: 100%; height: 90%;background-size: contain;background-position: center;background-repeat: no-repeat;";
+    
     const startDiv = document.getElementById('start');
     const topItems = document.getElementById('topItems');
     const exitBtn = document.getElementById('exit');
+    const gameOverDiv = document.getElementById('gameOver');
 
     document.getElementById('help').onclick = function () {
         alert("Ver Instructions.png (será posto ingame em versões futuras)");
