chao adicionado com textura

--- a/index.html
+++ b/index.html
@@ -76,6 +76,8 @@
 <!-- Classe representativa das paredes -->
 <script src="js/walls/WallDesign.js"></script>
 <script src="js/walls/Wall.js"></script>
+<script src="js/walls/FloorDesign.js"></script>
+<script src="js/walls/Floor.js"></script>
 
 <!-- Classes estáticas -->
 <script src="js/Cameras.js"></script>
