luzes de cartaz feitas

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
 <!-- Classe representativa dos holofotes -->
 <script src="js/lights/SpotlightDesign.js"></script>
 <script src="js/lights/Spotlight.js"></script>
+<script src="js/lights/BillboardLightDesign.js"></script>
+<script src="js/lights/BillboardLight.js"></script>
 
 <!-- Classe representativa das paredes -->
 <script src="js/walls/WallDesign.js"></script>
